gluecodium/src/test/resources/smoke/errors/output/swift/smoke/WithPayloadError.swift
//
//
import Foundation
public typealias WithPayloadError = Payload
extension Payload : Error {
}
